SigiDoc changes to epidoc global.css

--- a/webapps/ROOT/assets/styles/epidoc/global.css
+++ b/webapps/ROOT/assets/styles/epidoc/global.css
@@ -1,72 +1,116 @@
-.latinnum {
-    border-top: thin black solid;
-     }
-     
-.supraline {
-    border-top: thin black solid;
-     }
-     
-.previouslyread {
-    text-decoration: underline;
-     }
-     
-*[lang="la"] {
-    font-family: "GentiumAlt", "Gentium","Palatino Linotype", "Palatino", "Times New Roman", "Times", "Arial Unicode MS", serif;
+@font-face {
+  font-family: athenaruby;
+  src: url("../../fonts/AthenaRuby_b021.ttf") format("truetype");
 }
 
-*[lang="grc"] {
-    font-family: "Lucida Grande", "Arial Unicode MS","Galilee Unicode Gk", "New Athena Unicode", "Athena Unicode", 
-    "Palatino Linotype", "Titus Cyberbit Basic", "Cardo", "Vusillus Old Face", "Alphabetum", "Galatia SIL", 
-    "Code 2000", "GentiumAlt", "Gentium", "Minion Pro", "GeorgiaGreek", "Vusillus Old Face Italic", 
-    "Everson Mono", "Aristarcoj", "Porson", "Legendum", "Aisa Unicode", "Hindsight Unicode", "Caslon", 
+#diplomatic *[lang^="grc"] {
+  font-family: athenaruby;
+}
+
+#apparatus {
+  font-family: "calibri", "athenaruby";
+}
+
+#commentary p {
+  text-align: justify;
+  line-height: 1.6;
+  font-size: 100%;
+  font-family: "calibri", "athenaruby";
+}
+
+#lettering {
+  font-family: "calibri", "athenaruby";
+}
+
+#biblioEditions {
+  font-family: "calibri", "athenaruby";
+}
+
+#biblioCommEditions {
+  font-family: "calibri", "athenaruby";
+}
+
+#biblioParallels {
+  font-family: "calibri", "athenaruby";
+}
+
+#biblioCommParallels {
+  font-family: "calibri", "athenaruby";
+}
+
+/* Modified above this line for AthenaRuby font: Joel Kalvesmaki / MF 2019-05-19 / AS 2020-05-25, 2021-03-19 */
+
+.latinnum {
+  border-top: thin black solid;
+}
+
+.supraline {
+  border-top: thin black solid;
+}
+
+.previouslyread {
+  text-decoration: underline;
+}
+
+*[lang="la"] {
+  font-family: "calibri";
+}
+
+/* *[lang="grc"] {
+    font-family: "Lucida Grande", "Arial Unicode MS","Galilee Unicode Gk", "New Athena Unicode", "Athena Unicode",
+    "Palatino Linotype", "Titus Cyberbit Basic", "Cardo", "Vusillus Old Face", "Alphabetum", "Galatia SIL",
+    "Code 2000", "GentiumAlt", "Gentium", "Minion Pro", "GeorgiaGreek", "Vusillus Old Face Italic",
+    "Everson Mono", "Aristarcoj", "Porson", "Legendum", "Aisa Unicode", "Hindsight Unicode", "Caslon",
     "Verdana", "Tahoma";
    }
-   
+   */
 .textpart {
-    left: 6em;
-    line-height: 1.4;
-    margin-top: 8px;
-    margin-bottom: 8px;
-    position: relative;
-    padding-right: 2em;
+  left: 6em;
+  line-height: 1.4;
+  margin-top: 8px;
+  margin-bottom: 8px;
+  position: relative;
+  padding-right: 2em;
+  /*    font-family: 'calibri';
+*/
 }
 
 .textpartnumber {
-    padding-right: 0.2em;
-    position: absolute;
-    }
-    
+  padding-right: 0.2em;
+  position: absolute;
+  font-family: "calibri";
+  font-size: 80%;
+}
+
 .linenumber {
+  left: -4em;
+  padding-right: 0.2em;
+  position: absolute;
+  font-family: "calibri";
+  font-size: 80%;
+}
+
+/*.linenumberbroken {
     left: -4em;
     padding-right: 0.2em;
     position: absolute;
-    }
-    
-.linenumberbroken {
-    left: -4em;
-    padding-right: 0.2em;
-    position: absolute;
-    color: red ;
-    text-decoration: blink ;
-    }
-    
-.petraeligature {
-    text-decoration: underline;
-    }
-    
+    color: red;
+    text-decoration: blink;
+}*/
+
 .inslibligature {
       border-top: 2px solid black;
       border-radius: 6px;
       padding: 4px 2px 0px 2px;
 }
-    
+
 .underline {
-    text-decoration: underline;
-    }
+  text-decoration: underline;
+}
 
 .italic {
-    font-style: italic;
-    }
+  font-style: italic;
+}
 
 .rtl, .rtl * {
     direction: rtl;
@@ -74,60 +118,82 @@
 }
 
 h4.slimmer {
-    margin-bottom: -0.5em;
+  margin-bottom: -0.5em;
     }    
 
 h3.iospe {
-    color: rgb(40, 80, 114);
-    float: left;
-    font-family: arial,helvetica,sans-serif;
-    font-size: 125%;
-    max-width: 165px;
-    margin-top:0;
-    padding-top:0;
-    }
+  color: black;
+  float: left;
+  font-family: "calibri";
+  font-size: 20px;
+  max-width: 250px;
+  margin-top: 0;
+  padding-top: 0;
+  padding-right: inherit;
+  width: 165px;
+}
+
+h6.iospe {
+  font-family: "calibri";
+}
 
 h4.iospe {
-    font-family: arial,helvetica,sans-serif;
-    font-size: 13px;
-    color: rgb(51, 51, 51);
-    max-width: 165px;
-    width: 165px;
-    }
+  font-family: "calibri";
+  font-size: 16px;
+  color: black;
+  max-width: 165px;
+  width: 165px;
+}
 
 dl.iospe {
-    font-family: arial,helvetica,sans-serif;
-    font-size: 13px;
-    margin-bottom: 15px;
-    margin-top: 15px;
-    padding-left: 165px;
-    padding-top: 5px;
-    }
+  font-family: "calibri";
+  font-size: 15px;
+  margin-bottom: 5px;
+  margin-top: 15px;
+  padding-left: 165px;
+  padding-top: 5px;
+}
 
 dl.iospe dt {
-    float: left;
-    font-size: 13px;
-    font-weight: bold;
-    color: rgb(51, 51, 51);
-    max-width: 165px;
-    vertical-align: baseline;
-    width: 165px;
-    }
+  float: left;
+  font-size: 16px;
+  font-weight: bold;
+  color: #183a37;
+  max-width: 250px;
+  vertical-align: baseline;
+  width: 250px; /* instead of 200: changed to adapt the layout to the length of the fieldnames */
+  padding-left: 20px;
+  margin-bottom: auto;
+  padding-bottom: inherit;
+}
 
 dl.iospe dd {
-    font-size: 13px;
-    margin-left: 165px;
-    vertical-align: baseline;
-    }
+  font-size: 16px;
+  margin-left: 200px; /* instead of 165: changed to adapt the layout to the length of the fieldnames */
+  vertical-align: baseline;
+  margin-bottom: 1px;
+  font-family: "calibri";
+  padding-left: 50px;
+}
 
 div#edition.iospe {
-    margin-left: 100px;
-    }
+  margin-left: 100px;
+  font-size: 15px;
+  font-family: "calibri";
+}
 
 div.iospe {
-    margin-left:165px;
-    }
+  margin-left: 165px;
+}
+
+/* below this line: additions for images' and captions' display according to SigiDoc's htm-tpl-struct-sigidoc.xsl - AS 2020-05-27 */
+
+dl.box {
+  float: left;
+  width: 10%;
+  padding: 1px;
+}
 
 .no-space {
-    margin-bottom: -1.9em;
+  margin-bottom: -1.9em;
 }
