--- a/webapps/ROOT/assets/styles/tablesorter.css
+++ b/webapps/ROOT/assets/styles/tablesorter.css
@@ -1,27 +1,38 @@
-table.tablesorter thead tr th {
+/*table.tablesorter thead tr th {
     background-color: #E6EEEE;
-}
+}*/
 
 table.tablesorter thead tr th + th {
-    border-left: 1px solid #FFF;
+  text-align: center;
+  border-collapse: collapse;
 }
 
 table.tablesorter thead tr .header {
-    background-image: url("../images/tablesorter/bg.gif");
-    background-repeat: no-repeat;
-    background-position: center right;
-    cursor: pointer;
+  background-image: url("../images/tablesorter/bg.gif");
+  background-repeat: no-repeat;
+  background-position: center right;
+  cursor: pointer;
 }
 
 table.tablesorter thead tr .headerSortDown {
-    background-image: url("../images/tablesorter/desc.gif");
+  background-image: url("../images/tablesorter/desc.gif");
+  background-repeat: no-repeat;
+  background-position: center right;
+  cursor: pointer;
 }
 
 table.tablesorter thead tr .headerSortUp {
-    background-image: url("../images/tablesorter/asc.gif");
+  background-image: url("../images/tablesorter/asc.gif");
+  background-repeat: no-repeat;
+  background-position: center right;
+  cursor: pointer;
 }
 
 table.tablesorter thead tr .headerSortDown,
 table.tablesorter thead tr .headerSortUp {
-    background-color: #8DBDD8;
+  background-color: #8dbdd8;
+}
+
+tr:hover {
+  background-color: #f6f1f1;
 }
