--- a/webapps/ROOT/assets/templates/inscription-index.xml
+++ b/webapps/ROOT/assets/templates/inscription-index.xml
@@ -18,20 +18,20 @@
   <kiln:child>
     <kiln:block name="title">
       <kiln:super />
-      <xsl:text>Inscriptions</xsl:text>
+      <i18n:text i18n:key="inscription-index-seals"><xsl:text>Seals</xsl:text></i18n:text>
     </kiln:block>
 
     <kiln:block name="page-heading">
       <kiln:super />
-      <xsl:text>Inscriptions</xsl:text>
+      <i18n:text i18n:key="inscription-index-seals"><xsl:text>Seals</xsl:text></i18n:text>
     </kiln:block>
 
     <kiln:block name="content">
       <div class="row">
         <div class="large-12 columns">
-          <p>There are some <a href="{kiln:url-for-match('local-indices-type-display', ($language, 'epidoc'), 0)}">indices of various facets of inscription data</a> available.</p>
+          <!--<p>There are some <a href="{kiln:url-for-match('local-indices-type-display', ($language, 'epidoc'), 0)}">indices of various facets of inscription data</a> available.</p>-->
 
-          <p>The source EpiDoc XML for all of the listed inscriptions are available in a <a href="{kiln:url-for-match('local-epidoc-zip', ($language), 0)}">ZIP archive</a>.</p>
+          <p><i18n:text i18n:key="inscription-index-zip">The source XML for all of the listed editions of seals are available in a </i18n:text> <a href="{kiln:url-for-match('local-epidoc-zip', ($language), 0)}">ZIP archive</a>.</p>
 
           <xsl:apply-templates mode="text-index"
                                select="/aggregation/response" />
