--- a/webapps/ROOT/assets/templates/home.xml
+++ b/webapps/ROOT/assets/templates/home.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <kiln:root xmlns:i18n="http://apache.org/cocoon/i18n/2.1"
-           xmlns:kiln="http://www.kcl.ac.uk/artshums/depts/ddh/kiln/ns/1.0"
-           xmlns:xi="http://www.w3.org/2001/XInclude"
-           xmlns:xsl="http://www.w3.org/1999/XSL/Transform">
+  xmlns:kiln="http://www.kcl.ac.uk/artshums/depts/ddh/kiln/ns/1.0"
+  xmlns:xi="http://www.w3.org/2001/XInclude" xmlns:xsl="http://www.w3.org/1999/XSL/Transform">
 
   <kiln:parent>
-    <xi:include href="base.xml" />
+    <xi:include href="base.xml"/>
   </kiln:parent>
 
   <kiln:child>
@@ -29,15 +28,11 @@
           <div class="large-12 columns">
             <div class="panel radius">
               <p>Seals are the only remnants of the written documents used for daily administration
-                and private correspondence from the 4th to the 15th C. in the Byzantine Empire – i.e.
-                the Christian eastern medieval empire centred upon Constantinople – whose public and
-                private archives are nearly entirely lost. As such seals do not supplement archival
-                material but have to substitute it, which explains the unique importance of
-                sigillography for Byzantine studies.</p>
-            </div>
-          </div>
-          <div class="large-12 columns">
-            <div class="panel radius">
+                and private correspondence from the 4th to the 15th C. in the Byzantine Empire –
+                i.e. the Christian eastern medieval empire centred upon Constantinople – whose
+                public and private archives are nearly entirely lost. As such seals do not
+                supplement archival material but have to substitute it, which explains the unique
+                importance of sigillography for Byzantine studies.</p>
               <p>SigiDoc provides XML-based and TEI-compliant encoding standards for the description
                 and edition of Byzantine seals: as such, it aims to establish a set of rules and
                 guidelines to publish Byzantine seals in digital form. SigiDoc is intended for both
@@ -48,7 +43,22 @@
               <p>SigiDoc is largely based on the ongoing experience of EpiDoc and aims at becoming
                 the standard tool for the spreading of digital sigillography while delivering a
                 standard for the digital encoding of Byzantine seals. </p>
-              <p>GitHub repository available <a href="https://github.com/SigiDoc/SigiDoc" target="_blank">here</a>.</p>
+            </div>
+            <div class="row">
+              <div class="large-12 columns text-center">
+                <div class="panel radius">
+                  <p>The full bibliographical description of this publication: [to be changed by each project],
+                    available at: [to be changed by each project]. This should be abbreviated to [to be changed by each project].</p>
+                  <p>GitHub repository available <a href="https://github.com/SigiDoc"
+                    target="_blank">https://github.com/SigiDoc</a>.</p>
+                  <p><a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">
+                      <img alt="Creative Commons License" style="border-width:0"
+                        src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png"/>
+                    </a> This work is licensed under a <a rel="license"
+                      href="http://creativecommons.org/licenses/by-nc-sa/4.0/">CC-BY-NC-SA
+                      License</a> (unless otherwise stated).</p>
+                </div>
+              </div>
             </div>
           </div>
         </div>
