--- a/webapps/ROOT/assets/templates/base.xml
+++ b/webapps/ROOT/assets/templates/base.xml
@@ -117,7 +117,7 @@
                     src="https://www.orient-mediterranee.com/wp-content/uploads/2023/02/logo-om_2.svg"/>
                 </a>
               </p>
-              <div id="licence">
+              <!--<div id="licence">
                 <span id="licenceSpan">
                   <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/">
                     <img alt="CC BY NC SA"
@@ -127,7 +127,7 @@
                   ANR/DFG DigiByzSeal - Unlocking the Hidden Value of Seals: New Methodologies
                   for Historical Research in Byzantine Studies
                 </span>
-              </div>
+              </div>-->
               <p id="efes">Built on 
                   <a href="https://epidoc.stoa.org/">EpiDoc</a> 
                   and delivered by
