--- a/webapps/ROOT/assets/templates/home.xml
+++ b/webapps/ROOT/assets/templates/home.xml
@@ -48,7 +48,7 @@
               <div class="large-12 columns text-center">
                 <div class="panel radius">
                   <p>The full bibliographical description of this publication: [to be changed by each project],
-                    available at: [to be changed by each project]. This should be abbreviated to [to be changed by each project].</p>
+                    available at: [to be changed by each project].</p> <p>This should be abbreviated to [to be changed by each project].</p>
                   <p>GitHub repository available <a href="https://github.com/SigiDoc"
                     target="_blank">https://github.com/SigiDoc</a>.</p>
                   <p><a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">
