added switch to hide empty elements

--- a/webapps/ROOT/assets/templates/epidoc.xml
+++ b/webapps/ROOT/assets/templates/epidoc.xml
@@ -40,6 +40,8 @@
         |
         <a href="javascript:window.print()">PDF</a>
       </div>
+        <a class="hide-switch">hide empty</a>
+        <a class="hide-switch hidden">show all</a>
     </kiln:block>
 
     <!--<kiln:block name="content">
