--- a/webapps/ROOT/assets/styles/site.css
+++ b/webapps/ROOT/assets/styles/site.css
@@ -336,3 +336,18 @@ dl.iospe dd,
 .hidden{
     display:none;
 }
+
+.rtitab{
+    border: solid 1px gray;
+    width: 70px;
+    text-align: center;
+}
+
+.rtitab.active{
+    border: solid 1px gray;
+    background: lightgray
+}
+
+.rtitabs{
+    display: inline-flex;
+}
